removing apk cache

--- a/php7fpm/Dockerfile
+++ b/php7fpm/Dockerfile
@@ -5,8 +5,9 @@ ARG TIMEZONE
 
 RUN apk update \
  && apk add --no-cache $PHPIZE_DEPS icu-dev icu-libs openldap-dev sqlite \
+ && echo "date.timezone = '${TIMEZONE}';" > /usr/local/etc/php/conf.d/timezone.ini \
  && docker-php-ext-install -j4 intl exif ldap \
- && echo "date.timezone = '${TIMEZONE}';" > /usr/local/etc/php/conf.d/timezone.ini
+ && rm -rf /var/cache/apk/*
 
 COPY www.conf /usr/local/etc/php-fpm.d/www.conf
 
