not relying on email-stack-ct.sh for systemd start/stop

--- a/email-stack.service
+++ b/email-stack.service
@@ -9,8 +9,8 @@ Restart=always
 EnvironmentFile=/opt/email-stack/.env
 ExecStartPre=-/usr/bin/docker-compose -f /opt/email-stack/docker-compose.yml down
 ExecStartPre=-/opt/email-stack/email-stack-ctl.sh createvol
-ExecStart=/opt/email-stack/email-stack-ctl.sh start
-ExecStop=/opt/email-stack/email-stack-ctl.sh stop
+ExecStart=/usr/bin/docker-compose -f /opt/email-stack/docker-compose.yml up
+ExecStop=/usr/bin/docker-compose -f /opt/email-stack/docker-compose.yml down
 
 [Install]
 WantedBy=multi-user.target
